--- a/test/data/student-finance-forms-responses-and-expected-results.yml
+++ b/test/data/student-finance-forms-responses-and-expected-results.yml
@@ -337,6 +337,26 @@
 - :current_node: :what_year_full_time?
   :responses:
   - eu-full-time
+  - year-1718
+  :next_node: :continuing_student?
+  :outcome_node: false
+- :current_node: :continuing_student?
+  :responses:
+  - eu-full-time
+  - year-1718
+  - continuing-student
+  :next_node: :outcome_eu_ft_1718_continuing
+  :outcome_node: true
+- :current_node: :continuing_student?
+  :responses:
+  - eu-full-time
+  - year-1718
+  - new-student
+  :next_node: :outcome_eu_ft_1718_new
+  :outcome_node: true
+- :current_node: :what_year_full_time?
+  :responses:
+  - eu-full-time
   - year-1617
   :next_node: :continuing_student?
   :outcome_node: false
