--- a/test/data/simplified-expenses-checker-files.yml
+++ b/test/data/simplified-expenses-checker-files.yml
@@ -1,13 +1,14 @@
 ---
-lib/smart_answer_flows/simplified-expenses-checker.rb: d9070442b52ce0f4c25b0c98d0341d5f
-test/data/simplified-expenses-checker-questions-and-responses.yml: 3a64a3b60d4f8d9c0da89c4950dfbbde
-test/data/simplified-expenses-checker-responses-and-expected-results.yml: 8f489ab42df185ee78b4742e5636eaca
+lib/smart_answer_flows/simplified-expenses-checker.rb: 1879c8246250e28f5943af73eeb6e314
+test/data/simplified-expenses-checker-questions-and-responses.yml: adbb54d7e946b126bfd6e6ee5fab3c59
+test/data/simplified-expenses-checker-responses-and-expected-results.yml: 1384414caa9a2cfd387d037710576b1e
 lib/smart_answer_flows/simplified-expenses-checker/outcomes/capital_allowance_result.govspeak.erb: 0f738efb15d8d63ebb9f824eb4010744
 lib/smart_answer_flows/simplified-expenses-checker/outcomes/you_can_use_result.govspeak.erb: c688eef5f6cc7fdfee645d1198a3ee7f
 lib/smart_answer_flows/simplified-expenses-checker/outcomes/you_cant_claim_capital_allowance.govspeak.erb: ce5b4e04d999e918d236a47861d71114
 lib/smart_answer_flows/simplified-expenses-checker/outcomes/you_cant_use_result.govspeak.erb: 6fd519340fea04074265249f707e0815
 lib/smart_answer_flows/simplified-expenses-checker/questions/buying_new_vehicle.govspeak.erb: d984ce8d59ba4e0727c5d23b1fd03c56
 lib/smart_answer_flows/simplified-expenses-checker/questions/capital_allowances.govspeak.erb: 07770bf1ac96a7e4cecc794598e9ea3f
+lib/smart_answer_flows/simplified-expenses-checker/questions/car_status_before_usage.govspeak.erb: c49c42b23fe44a22885b2c2803665ae5
 lib/smart_answer_flows/simplified-expenses-checker/questions/claimed_expenses_for_current_business.govspeak.erb: 9c22e78fa8aa55fb29e20d50e4260bb8
 lib/smart_answer_flows/simplified-expenses-checker/questions/current_claim_amount_home.govspeak.erb: 86a18902d1449754eaababb037f199e6
 lib/smart_answer_flows/simplified-expenses-checker/questions/deduct_from_premises.govspeak.erb: 583166270f64805d43b0cadf92f4d43c
