--- a/test/data/simplified-expenses-checker-files.yml
+++ b/test/data/simplified-expenses-checker-files.yml
@@ -5,6 +5,7 @@ lib/smart_answer_flows/simplified-expenses-checker/outcomes/you_cant_claim_capit
 lib/smart_answer_flows/simplified-expenses-checker/outcomes/you_cant_use_result.govspeak.erb: 6fd519340fea04074265249f707e0815
 lib/smart_answer_flows/simplified-expenses-checker/questions/buying_new_vehicle.govspeak.erb: d984ce8d59ba4e0727c5d23b1fd03c56
 lib/smart_answer_flows/simplified-expenses-checker/questions/capital_allowances.govspeak.erb: 07770bf1ac96a7e4cecc794598e9ea3f
+lib/smart_answer_flows/simplified-expenses-checker/questions/car_status_before_usage.govspeak.erb: c49c42b23fe44a22885b2c2803665ae5
 lib/smart_answer_flows/simplified-expenses-checker/questions/claimed_expenses_for_current_business.govspeak.erb: 9c22e78fa8aa55fb29e20d50e4260bb8
 lib/smart_answer_flows/simplified-expenses-checker/questions/current_claim_amount_home.govspeak.erb: 86a18902d1449754eaababb037f199e6
 lib/smart_answer_flows/simplified-expenses-checker/questions/deduct_from_premises.govspeak.erb: 583166270f64805d43b0cadf92f4d43c
@@ -20,6 +21,6 @@ lib/smart_answer_flows/simplified-expenses-checker/questions/type_of_expense.gov
 lib/smart_answer_flows/simplified-expenses-checker/questions/vehicle_business_use_time.govspeak.erb: e864e4c5c4cbb4ec05a0e4fe20746c62
 lib/smart_answer_flows/simplified-expenses-checker/questions/vehicle_expense.govspeak.erb: beb0a689c3bb82ad1bb43c3e4f94c81e
 lib/smart_answer_flows/simplified-expenses-checker/simplified_expenses_checker.govspeak.erb: 6571e279177cb83ce3a06b31eb90a6e8
-lib/smart_answer_flows/simplified-expenses-checker.rb: 45d35acf830a99eef2483b486f13ec2f
-test/data/simplified-expenses-checker-questions-and-responses.yml: 10818b972d4be6fbb57724a9f971b78e
-test/data/simplified-expenses-checker-responses-and-expected-results.yml: 509640969777528ccb8303cca05f3a48
+lib/smart_answer_flows/simplified-expenses-checker.rb: b255e482f71879d638dd42631798b5dc
+test/data/simplified-expenses-checker-questions-and-responses.yml: 78d65c9926de9f495148369b29a2b600
+test/data/simplified-expenses-checker-responses-and-expected-results.yml: 53c7fceaafb06a4dba77cad8a6e0a5e6
