--- a/lib/data/rates/state_pension.yml
+++ b/lib/data/rates/state_pension.yml
@@ -23,3 +23,8 @@
   end_date: 2017-04-05
   weekly_rate: 119.30
   lower_weekly_rate: 71.50
+
+- start_date: 2017-04-06
+  end_date: 2018-04-05
+  weekly_rate: 122.30
+  lower_weekly_rate: 73.30
