--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -109,6 +109,14 @@
   - 'no'
   :next_node: :outcome_can_not_rent
   :outcome_node: true
+- :current_node: :what_nationality?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  :next_node: :outcome_can_rent
+  :outcome_node: true
 - :current_node: :tenant_over_18?
   :responses:
   - B1 1PW
