--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -115,6 +115,24 @@
   - 'yes'
   - 'yes'
   - non-eea
+  :next_node: :family_permit?
+  :outcome_node: false
+- :current_node: :family_permit?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :family_permit?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
   :next_node: :outcome_can_rent
   :outcome_node: true
 - :current_node: :tenant_over_18?
