--- a/test/data/landlord-immigration-check-files.yml
+++ b/test/data/landlord-immigration-check-files.yml
@@ -16,6 +16,7 @@ lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_nee
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_needed_when_mobile_home.govspeak.erb: e027d7b397e09b60ca7ee234ed7b7f7d
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_check_not_needed_when_under_18.govspeak.erb: 57f489ea247c5dae1b90903a7518d1eb
 lib/smart_answer_flows/landlord-immigration-check/outcomes/outcome_landlords_checking_service.govspeak.erb: c0b7b0a3e58c29962e3dbf846f847945
+lib/smart_answer_flows/landlord-immigration-check/questions/family_permit.govspeak.erb: f7040bcd75e71256f2d974da1085ab53
 lib/smart_answer_flows/landlord-immigration-check/questions/has_asylum_card.govspeak.erb: da15f9bb156eed4ff866cfba4072620b
 lib/smart_answer_flows/landlord-immigration-check/questions/has_certificate.govspeak.erb: c670d7bc733232a394b4caa93a6aefb9
 lib/smart_answer_flows/landlord-immigration-check/questions/has_documents.govspeak.erb: ea1250a0013c28b4a7cbcb0337219e16
@@ -33,6 +34,6 @@ lib/smart_answer_flows/landlord-immigration-check/questions/tenant_over_18.govsp
 lib/smart_answer_flows/landlord-immigration-check/questions/time_limited_to_remain.govspeak.erb: 05c03a6a5cc9e07c3816a446cdc1c6f3
 lib/smart_answer_flows/landlord-immigration-check/questions/waiting_for_documents.govspeak.erb: 741ab2f1b24d0fcf14ce358b517e9361
 lib/smart_answer_flows/landlord-immigration-check/questions/what_nationality.govspeak.erb: c94a7dfdc3b9155d23504c798c20915d
-lib/smart_answer_flows/landlord-immigration-check.rb: ad29af6df90b97c08f77061c2950bc03
-test/data/landlord-immigration-check-questions-and-responses.yml: 66179e364ab24c843faae5c6a5394bb3
-test/data/landlord-immigration-check-responses-and-expected-results.yml: a3dbf853ddabd345dd0ba6e143178634
+lib/smart_answer_flows/landlord-immigration-check.rb: 0d0f19e4beda742d0468e93b955f2b0e
+test/data/landlord-immigration-check-questions-and-responses.yml: e2ad6e8ae1199ad7dfe885da72f5157f
+test/data/landlord-immigration-check-responses-and-expected-results.yml: 7aee0eb7c5cccecc4a0dbf05a04096fa
