--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -133,6 +133,26 @@
   - 'yes'
   - non-eea
   - 'no'
+  :next_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :outcome_node: false
+- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
   :next_node: :outcome_can_rent
   :outcome_node: true
 - :current_node: :tenant_over_18?
