--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -143,7 +143,7 @@
   - non-eea
   - 'no'
   - 'yes'
-  :next_node: :outcome_can_rent
+  :next_node: :outcome_can_rent_but_check_will_be_needed_again
   :outcome_node: true
 - :current_node: :has_residence_card_or_eu_eea_swiss_family_member?
   :responses:
