--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -153,6 +153,28 @@
   - non-eea
   - 'no'
   - 'no'
+  :next_node: :has_documents?
+  :outcome_node: false
+- :current_node: :has_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
   :next_node: :outcome_can_rent
   :outcome_node: true
 - :current_node: :tenant_over_18?
