Reimplement question 12, time limited leave to remain
If the user answered `no` to question `has_documents?` they should be
directed to question `time_limited_to_remain?`. This question had been
previously commented out, but has been reimplemented here.

This is a yes/no question, but both responses point to the same outcome.
This is because the question that answering `no` should direct the user
to hasn’t been implemented yet.

Unit and regression tests have been updated to include this question.

--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -175,7 +175,31 @@
   - 'no'
   - 'no'
   - 'no'
-  :next_node: :outcome_can_rent
+  :next_node: :time_limited_to_remain?
+  :outcome_node: false
+- :current_node: :time_limited_to_remain?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent_but_check_will_be_needed_again
+  :outcome_node: true
+- :current_node: :time_limited_to_remain?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :outcome_can_rent_but_check_will_be_needed_again
   :outcome_node: true
 - :current_node: :tenant_over_18?
   :responses:
