--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -199,7 +199,33 @@
   - 'no'
   - 'no'
   - 'no'
-  :next_node: :outcome_can_rent_but_check_will_be_needed_again
+  :next_node: :has_other_documents?
+  :outcome_node: false
+- :current_node: :has_other_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
+  :next_node: :outcome_can_rent
+  :outcome_node: true
+- :current_node: :has_other_documents?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :outcome_can_not_rent
   :outcome_node: true
 - :current_node: :tenant_over_18?
   :responses:
