--- a/test/data/landlord-immigration-check-responses-and-expected-results.yml
+++ b/test/data/landlord-immigration-check-responses-and-expected-results.yml
@@ -253,7 +253,37 @@
   - 'no'
   - 'no'
   - 'no'
+  :next_node: :immigration_application?
+  :outcome_node: false
+- :current_node: :immigration_application?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'yes'
   :next_node: :outcome_landlords_checking_service
+  :outcome_node: true
+- :current_node: :immigration_application?
+  :responses:
+  - B1 1PW
+  - 'yes'
+  - 'yes'
+  - non-eea
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  - 'no'
+  :next_node: :outcome_can_not_rent
   :outcome_node: true
 - :current_node: :tenant_over_18?
   :responses:
