Update rating for Married couple allowance
This commit contains ratings update to the following:

- lib/data/rates/married_couples_allowance.yml
 - maximum_married_couple_allowance: 8445
 - minimum_married_couple_allowance: 3260

- lib/data/rates/personal_allowance.yml
 - income_limit_for_personal_allowances: 28000.0

These values have been made based on the instructions from [1].

I have included the regression test artefacts within to show areas
affected by these changes

Based on the above, I have reviewed the changes to the regression
test artefacts and they appear as expected.

Already existing unit, regression and integration tests passed,
giving assurance that the aforementioned commit/changes have had
no (interfering) effect to other smart answers.

[1] https://docs.google.com/document/d/1AhqvcSM99gGdCeeFh6LfxBDfcOPq_j11prvJuvJqVGs/edit#

--- a/lib/data/rates/married_couples_allowance.yml
+++ b/lib/data/rates/married_couples_allowance.yml
@@ -18,3 +18,8 @@
   end_date: 2017-04-05
   maximum_married_couple_allowance: 8355
   minimum_married_couple_allowance: 3220
+
+- start_date: 2017-04-06
+  end_date: 2018-04-05
+  maximum_married_couple_allowance: 8445
+  minimum_married_couple_allowance: 3260
