Create an outcome per path for the Greece
The goal of this story is to migrate the flow for
Greece to use the outcome per path strategy.

So far test artefacts haven't been affected by this change.

As you observe the title only contains opposite sex title, this
becuase the same sex title doesn't use the content title block.

It uses the markdown syntax, this will be fix in later commits

--- a/test/data/marriage-abroad-files.yml
+++ b/test/data/marriage-abroad-files.yml
@@ -200,6 +200,25 @@ lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_loca
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_local/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_other/_opposite_sex.govspeak.erb: 0480f6222df00b196f1b642532212e18
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/gambia/uk/partner_other/_same_sex.govspeak.erb: 016c1cbf7dc5e328912f6a1a32dfd8f8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/_title.govspeak.erb: d2831c289fa3c344ef851e2a8d91842d
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 566ddd08c18968a89f5c449c56a1d2ec
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_british/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_local/_opposite_sex.govspeak.erb: bba7e3aaaeb0c82ec6f076436006f722
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_local/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_other/_opposite_sex.govspeak.erb: bba7e3aaaeb0c82ec6f076436006f722
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/ceremony_country/partner_other/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_british/_opposite_sex.govspeak.erb: b128dd542a24c244b9255e5550b03e16
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_british/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_local/_opposite_sex.govspeak.erb: 0cf35c8c6635c0f187cd47fea9acd8d8
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_local/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_other/_opposite_sex.govspeak.erb: 92c7f14c69f0ea40b1d061d31020b230
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/partner_other/_same_sex.govspeak.erb: 894202270626d6c388179571b9eab898
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_british/_opposite_sex.govspeak.erb: 61569bd8ca401b6ebfaa23c3642549ce
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_british/_same_sex.govspeak.erb: aed7792fb2b589aeb1d2476b3f690a1a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_local/_opposite_sex.govspeak.erb: b44b1ea06184989e8de5f22f9b1f292f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_local/_same_sex.govspeak.erb: aed7792fb2b589aeb1d2476b3f690a1a
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_other/_opposite_sex.govspeak.erb: b44b1ea06184989e8de5f22f9b1f292f
+lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/uk/partner_other/_same_sex.govspeak.erb: aed7792fb2b589aeb1d2476b3f690a1a
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/_title.govspeak.erb: 06ea7117275c8ab9ae99421f9877e3d1
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_opposite_sex.govspeak.erb: 6d62235d8858e92063837997f27ef666
 lib/smart_answer_flows/marriage-abroad/outcomes/countries/hungary/ceremony_country/partner_british/_same_sex.govspeak.erb: c3fc43c96008806c77b5fba56b8c3912
