--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -1825,6 +1825,11 @@
   :outcome_node: true
 - :current_node: :what_passport_do_you_have?
   :responses:
+  - latvia
+  :next_node: :outcome_no_visa_needed
+  :outcome_node: true
+- :current_node: :what_passport_do_you_have?
+  :responses:
   - oman
   :next_node: :purpose_of_visit?
   :outcome_node: false
