Add new question what_sort_of_passport?
If the user selects Estonia in the first question, they are now being
redirected to a new question.

This new question currently directs all users to outcome 1, the same
outcome that Estonian passport holders were directed to before this
question was added. That is because the new question will be fully
implemented in the next commit.

A calculator function and unit tests have been added to check whether
Estonia has been selected.

Integration tests have been updated to include the new flow for Estonia

Test artefacts have been updated as expected.

--- a/test/data/check-uk-visa-questions-and-responses.yml
+++ b/test/data/check-uk-visa-questions-and-responses.yml
@@ -22,6 +22,9 @@
 :israeli_document_type?:
 - full-passport
 - provisional-passport
+:what_sort_of_passport?:
+- citizen
+- alien
 :purpose_of_visit?:
 - tourism
 - work
