--- a/test/data/check-uk-visa-responses-and-expected-results.yml
+++ b/test/data/check-uk-visa-responses-and-expected-results.yml
@@ -1100,6 +1100,18 @@
 - :current_node: :what_passport_do_you_have?
   :responses:
   - estonia
+  :next_node: :what_sort_of_passport?
+  :outcome_node: false
+- :current_node: :what_sort_of_passport?
+  :responses:
+  - estonia
+  - citizen
+  :next_node: :outcome_no_visa_needed
+  :outcome_node: true
+- :current_node: :what_sort_of_passport?
+  :responses:
+  - estonia
+  - alien
   :next_node: :outcome_no_visa_needed
   :outcome_node: true
 - :current_node: :what_passport_do_you_have?
